# aiomygas

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  publish.yml  python-publish.yml
aiomygas/: __init__.py  __main__.py  _version.py  api.py  auth.py  cli.py  const.py  device_info.py  devices.json  exceptions.py
aiomygas/queries/: __init__.py  accounts.py  base.py  charges.py  client.py  els_info.py  indication_send.py  lspu_info.py  payments.py  receipt.py  signin.py
examples/: example.py
tests/: test_api.py  test_auth.py  test_cli.py  test_device_info.py  test_queries.py
tests/fixtures/: AccountsN_response.json  ClientV2_response.json  clientCharges_response_error.json  device_info.json  elsInfo_response.json  indicationSendV4_response.json  lspuInfo_response.json  paymentsByLspu_response.json  receipt_response_error.json  signInN3_response.json  signInN3_response_error.json
