[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomygas"
dependencies = [
    "aiohttp"
]
dynamic = ["version"]
description = "Asynchronous Python API For My Gas"
readme = "README.md"
requires-python = ">=3.9.0"
keywords = [
    "energy",
    "gas"
]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[project.urls]
Home = "https://github.com/lizardsystems/aiomygas"
Repository = "https://github.com/lizardsystems/aiomygas"
Documentation = "https://github.com/lizardsystems/aiomygas"
"Bug Tracker" = "https://github.com/lizardsystems/aiomygas/issues"
Changelog = "https://github.com/lizardsystems/aiomygas/blob/master/CHANGELOG.md"

[[project.authors]]
name = "LizardSystems"

[tool.setuptools_scm]
version_file = "aiomygas/_version.py"
local_scheme = "no-local-version"
version_scheme = "no-guess-dev"

[tool.setuptools]
platforms = ["any"]
include-package-data = true
package-data = {"aiomygas" = ["py.typed"]}

[project.scripts]
aiomygas-cli = "aiomygas.__main__:main"

[tool.setuptools.packages.find]
include = ["aiomygas*"]
