[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomygas"
version = "2.4.0"
dependencies = [
    "aiohttp>=3"
]
description = "Asynchronous Python API For My Gas"
readme = "README.md"
requires-python = ">=3.13"
keywords = [
    "energy",
    "gas"
]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[project.urls]
Home = "https://github.com/lizardsystems/aiomygas"
Repository = "https://github.com/lizardsystems/aiomygas"
Documentation = "https://github.com/lizardsystems/aiomygas"
"Bug Tracker" = "https://github.com/lizardsystems/aiomygas/issues"
Changelog = "https://github.com/lizardsystems/aiomygas/blob/main/CHANGELOG.md"

[[project.authors]]
name = "LizardSystems"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
aiomygas-cli = "aiomygas.__main__:main"

[tool.setuptools]
platforms = ["any"]
include-package-data = true
package-data = {"aiomygas" = ["py.typed", "devices.json"]}

[tool.setuptools.packages.find]
include = ["aiomygas*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
